src/test/deca/context/valid/provided/assign_sans_init.deca
// Description:
//    assign sans initialisation
//
// Resultats:
//    ok
//
// Historique:
//    cree le 11/01/2025
{
    int x = 5;

    x = x + 1;
}