src/test/deca/context/invalid/provided/or_non_booleen.deca
// Description:
//    Expression logique 'or' avec un type non booléen.
//
// Resultats:
//    or_non_booleen.deca:14:21: both operands should be of type boolean
//
// Historique:
//    cree le 11/01/2025
{
    boolean x = true;
    float y = 3.5;

    // Doit etre refuse.
    boolean result = x || y;
}
